Added writing fist draft in mzml lib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,10 @@
 		"stop_token": "cpp",
 		"thread": "cpp",
 		"variant": "cpp",
-		"optional": "cpp"
+		"optional": "cpp",
+		"charconv": "cpp",
+		"format": "cpp",
+		"span": "cpp",
+		"codecvt": "cpp"
 	}
 }
