Updated with float output instead of double

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
 		"charconv": "cpp",
 		"format": "cpp",
 		"span": "cpp",
-		"codecvt": "cpp"
+		"codecvt": "cpp",
+		"text_encoding": "cpp"
 	}
 }
