--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,10 @@ changelog
 *.log
 zlib.3
 external/zlib-1.3.1
+external/hdf5-1.14.4-3
+external/libaec-1.1.3
+HDF5config.cmake
+HDF5options.cmake
+FailedCTest.txt
+CTestScript.cmake
+gaussian.cpp
