Fixed missing libraries, excluded headers only and added pugi in src

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
 		"format": "cpp",
 		"span": "cpp",
 		"codecvt": "cpp",
-		"text_encoding": "cpp"
+		"text_encoding": "cpp",
+		"cfenv": "cpp",
+		"filesystem": "cpp"
 	}
 }
